cmake_minimum_required(VERSION 2.8)
set (CMAKE_CXX_STANDARD 11)
cmake_policy(SET CMP0015 NEW)
project( MyProject )
find_package( OpenCV REQUIRED )
include_directories("comm/wpiutil/include" "comm/include")
link_directories("comm/lib")
set(CMAKE_SHARED_LINKER_FLAGS "-lntcore" "-lwpiutil")
add_executable( MyProject main.cpp)
target_link_libraries( MyProject pthread ntcore wpiutil ${OpenCV_LIBS})
